--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "infinite-react-carousel": "^1.2.0",
     "material-ui-image": "^3.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
